[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Theme/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/UI/DialogMenu.png" type="Texture" id=2]
[ext_resource path="res://UI/Dialog Menu/Dialog Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Theme/raleway.medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="DialogMenu" type="Control"]
margin_left = 190.0
margin_top = 180.0
margin_right = 1730.0
margin_bottom = 900.0
rect_min_size = Vector2( 1540, 720 )
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="DialogContainer" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1540, 720 )
texture = ExtResource( 2 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Title" type="RichTextLabel" parent="DialogContainer"]
margin_left = 64.0
margin_top = 64.0
rect_min_size = Vector2( 1412, 40 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "-"
text = "-"

[node name="ScrollContainer" type="ScrollContainer" parent="DialogContainer"]
margin_left = 64.0
margin_top = 128.0
margin_right = 1476.0
margin_bottom = 656.0
rect_min_size = Vector2( 1412, 528 )

[node name="Text" type="RichTextLabel" parent="DialogContainer/ScrollContainer"]
margin_right = 1412.0
margin_bottom = 528.0
rect_min_size = Vector2( 1412, 528 )
bbcode_enabled = true
bbcode_text = "-"
text = "-"

[node name="Button" type="Button" parent="DialogContainer"]
margin_left = 1328.0
margin_top = 616.0
margin_right = 150.0
margin_bottom = 490.0
rect_min_size = Vector2( 150, 40 )
text = "Okay"

[connection signal="pressed" from="DialogContainer/Button" to="." method="_on_Accept_Button_pressed"]
